--- a/assets/style.css
+++ b/assets/style.css
@@ -15,7 +15,7 @@ body {
     margin-top: 5px;
     margin-left: 20%;
     margin-right: 20%;
-    height: auto;
+    height: ;
 }
 h1 {
     font-size: 48px;
